--- a/src/Gemfile
+++ b/src/Gemfile
@@ -7,3 +7,4 @@ gem 'rspec', '~> 3.11'
 gem 'colorize', '~> 0.8.1'
 gem 'date', '~> 3.2', '>= 3.2.2'
 gem 'tty-prompt', '~> 0.23.1'
+gem 'tty-table', '~> 0.12.0'
