--- a/src/Gemfile
+++ b/src/Gemfile
@@ -1,10 +1,10 @@
 # frozen_string_literal: true
 
-source "https://rubygems.org"
+source 'https://rubygems.org'
 
 # gem "rails"
-gem 'rspec', '~> 3.11'
 gem 'colorize', '~> 0.8.1'
 gem 'date', '~> 3.2', '>= 3.2.2'
+gem 'rspec', '~> 3.11'
 gem 'tty-prompt', '~> 0.23.1'
 gem 'tty-table', '~> 0.12.0'
