--- a/src/Gemfile
+++ b/src/Gemfile
@@ -8,3 +8,5 @@ gem 'date', '~> 3.2', '>= 3.2.2'
 gem 'rspec', '~> 3.11'
 gem 'tty-prompt', '~> 0.23.1'
 gem 'tty-table', '~> 0.12.0'
+gem 'tty-box', '~> 0.7.0'
+gem 'tty-markdown', '~> 0.7.0'
